[gd_scene load_steps=12 format=2]

[ext_resource path="res://Menus/MenusInGame/MenuInGame.gd" type="Script" id=1]
[ext_resource path="res://Menus/KeyboardController.gd" type="Script" id=2]
[ext_resource path="res://Menus/BasicMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menus/MenusInGame/Title-Menus-Game.png" type="Texture" id=4]
[ext_resource path="res://Menus/Button-Normal.png" type="Texture" id=5]
[ext_resource path="res://Menus/Button-Hover.png" type="Texture" id=6]
[ext_resource path="res://Menus/Buttons-Icons.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 575, 150 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 100, 100 )

[node name="MenuInGame" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="KeyboardController" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BasicMenu" parent="." instance=ExtResource( 3 )]

[node name="TitlePause" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -287.5
margin_top = 50.0
margin_right = 287.5
margin_bottom = 150.0
texture = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -300.0
margin_bottom = -50.0
custom_constants/separation = 50
alignment = 1

[node name="HomeButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 204.0
margin_right = 380.0
margin_bottom = 250.0
rect_min_size = Vector2( 176, 200 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="HBoxContainer/HomeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -55.0
margin_right = 50.0
margin_bottom = 50.0
texture = SubResource( 2 )

[node name="PlayButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 430.0
margin_right = 650.0
margin_bottom = 250.0
rect_min_size = Vector2( 220, 250 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="HBoxContainer/PlayButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -62.5
margin_right = 62.5
margin_bottom = 62.5
rect_min_size = Vector2( 125, 125 )
texture = SubResource( 3 )
stretch_mode = 6

[node name="LevelsButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 700.0
margin_right = 876.0
margin_bottom = 250.0
rect_min_size = Vector2( 176, 200 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
stretch_mode = 3

[node name="Icon" type="TextureRect" parent="HBoxContainer/LevelsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
texture = SubResource( 4 )

[connection signal="visibility_changed" from="." to="." method="_on_MenuInGame_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="HBoxContainer/LevelsButton" to="." method="_on_LevelsButton_pressed"]
